--- a/crates/bellpepper-core/Cargo.toml
+++ b/crates/bellpepper-core/Cargo.toml
@@ -21,11 +21,12 @@ byteorder = { workspace = true }
 ff = { workspace = true }
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0.44"
+indexmap = "2.0"
 
 [dev-dependencies]
 blstrs = { workspace = true }
 criterion = "0.4.0"
-rand_core = { workspace = true}
+rand_core = { workspace = true }
 rand_xorshift = { workspace = true }
 
 [badges]
